--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ kombu==5.0.2
 pkg-resources==0.0.0
 prompt-toolkit==3.0.14
 psycopg2==2.8.6
+python-dotenv==0.15.0
 pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
